<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/how_to_play"
                android:textAppearance="@style/AvenirBlack"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textSize="30sp"/>



            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:layout_marginBottom="@dimen/large_padding"
                android:paddingStart="@dimen/container_padding"
                android:paddingEnd="@dimen/container_padding"
                android:text="@string/how_to_play_2_1"
                android:textAppearance="@style/AvenirMedium"
                android:textColor="@color/colorSecondary"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/how_to_play_2_1"
                android:src="@drawable/how_to_play_2"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>

            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:layout_marginBottom="@dimen/large_padding"
                android:paddingStart="@dimen/container_padding"
                android:paddingEnd="@dimen/container_padding"
                android:text="@string/how_to_play_2_2"
                android:textAppearance="@style/AvenirMedium"
                android:textColor="@color/colorSecondary"
                android:textAlignment="center"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>