<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/how_to_play"
                android:textAppearance="@style/AvenirBlack"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textSize="30sp"/>

            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:layout_marginBottom="@dimen/large_padding"
                android:paddingStart="@dimen/container_padding"
                android:paddingEnd="@dimen/container_padding"
                android:text="@string/how_to_play_3_1"
                android:textAppearance="@style/AvenirLight"
                android:textColor="@color/colorSecondary"
                android:textAlignment="center"/>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:padding="@dimen/container_padding_small"
                android:background="@drawable/gradient_1">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/how_to_play_3_2"
                    android:textAppearance="@style/AvenirLight"
                    android:textColor="@color/colorSecondary"
                    android:textAlignment="center"
                    android:textSize="10sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/image_no_logo"
                        android:adjustViewBounds="true"/>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/small_padding"
                        android:paddingBottom="@dimen/small_padding"
                        android:orientation="vertical"
                        android:background="@drawable/rectangle_rounded_white_small">



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/small_padding"
                            android:paddingEnd="@dimen/small_padding"
                            android:text="E-VOUCHER"
                            android:textAllCaps="true"
                            android:textAppearance="@style/AvenirBlack"
                            android:textSize="8sp"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:id="@+id/tvPoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/small_padding"
                            android:paddingEnd="@dimen/small_padding"
                            android:layout_marginBottom="@dimen/small_padding"
                            android:text="100,000 points"
                            android:textAppearance="@style/AvenirMedium"
                            android:textSize="8sp"
                            android:textColor="@android:color/black"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.6dp"
                            android:background="@color/colorLightGray"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/small_padding"
                            android:paddingEnd="@dimen/small_padding"
                            android:layout_marginTop="@dimen/small_padding"
                            android:text="Expiry 13 May 2020"
                            android:textAppearance="@style/AvenirMedium"
                            android:textSize="6sp"
                            android:textColor="@color/colorLightGray"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/how_to_play_3_3"
                    android:textAppearance="@style/AvenirLight"
                    android:textColor="@color/colorSecondary"
                    android:textAlignment="center"
                    android:textSize="10sp"/>

            </RelativeLayout>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/normal_padding"
                android:paddingBottom="@dimen/normal_padding"
                android:text="@string/how_to_play_3_buttton"
                android:textAppearance="@style/AvenirBlack"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="10sp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:layout_marginBottom="@dimen/large_padding"
                android:paddingStart="@dimen/container_padding"
                android:paddingEnd="@dimen/container_padding"
                android:text="@string/how_to_play_3_4"
                android:textAppearance="@style/AvenirLight"
                android:textColor="@color/colorSecondary"
                android:textAlignment="center"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>