<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark">



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tettle"
                android:textSize="28sp"
                android:textAppearance="@style/AvenirBlack"
                android:gravity="center"
                android:textColor="@color/colorGold"
                android:text="How to play?"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/syarat"
                android:textAppearance="@style/AvenirBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tettle"
                android:textColor="@color/colorSecondary"
                android:textSize="19sp"
                android:gravity="center"
                android:text="Syarat dan ketentuan untuk bermain."/>

            <RelativeLayout
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_below="@+id/syarat"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textAppearance="@style/AvenirLight"
                        android:textSize="17sp"
                        android:layout_marginRight="5dp"
                        android:textColor="#FFF9F9F9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Untuk bermain"/>
                    <TextView
                        android:id="@+id/nameMerchant"
                        android:textSize="17sp"
                        android:textAppearance="@style/AvenirBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="Be a Ciputra Billionaire"/>
                    <TextView
                        android:textAppearance="@style/AvenirLight"
                        android:textSize="17sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="#f9f9f9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="anda"/>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/title2"
                android:textAppearance="@style/AvenirLight"
                android:textSize="18sp"
                android:textColor="#f9f9f9"
                android:layout_below="@+id/title1"
                android:text="harus mempunyai"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:id="@+id/v_user_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2">

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textStyle="bold"
                        android:textAppearance="@style/AvenirBlack"
                        android:text="5,000"
                        android:textAllCaps="true"
                        android:textColor="@color/colorGold"
                        android:textSize="@dimen/heading_1"
                        android:id="@+id/tv_user_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:text="@string/points"
                        android:textAppearance="@style/AvenirBook"
                        android:textColor="@color/colorSecondary"
                        android:id="@+id/points"
                        android:textSize="@dimen/text_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/title3"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:layout_below="@+id/v_user_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF9F9F9"
                android:text="Pastikan kamu mempunyai points yang cukup untuk bermain game ini, atau anda bisa TOP UP untuk memenuhi points anda."
                android:textAppearance="@style/AvenirLight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/title3"
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGold"
                android:text="@string/button_next"
                android:textAppearance="@style/AvenirBlack"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondary"
                tools:text="@string/button_next" />

            <TextView
                android:id="@+id/title4"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_below="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/AvenirLight"
                android:textColor="@color/colorSecondary"
                android:text="Atau anda bisa menemukan nya di dashboard anda."/>


            <RelativeLayout
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/line_bottom"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/title4"
                android:layout_marginTop="@dimen/large_padding"
                android:paddingStart="@dimen/large_padding"
                android:paddingEnd="@dimen/large_padding"
                android:paddingTop="@dimen/normal_padding"
                android:paddingBottom="@dimen/normal_padding"
                android:background="@drawable/button_rounded_corner_dashboard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:id="@+id/top_up"
                        android:onClick="topUp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <ImageButton
                            android:onClick="topUp"
                            android:id="@+id/btn_top_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@null"
                            app:srcCompat="@drawable/ic_add_circle_outline" />

                        <TextView
                            android:onClick="topUp"
                            android:id="@+id/tv_top_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btn_top_up"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/small_padding"
                            android:text="TOP UP"
                            android:textAppearance="@style/AvenirHeavy"
                            android:textAllCaps="true"
                            android:textColor="@color/colorSecondary" />

                    </RelativeLayout>



                    <RelativeLayout
                        android:onClick="scan"
                        android:id="@+id/pay"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <ImageButton
                            android:onClick="scan"
                            android:id="@+id/btn_pay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@null"
                            app:srcCompat="@drawable/ic_star"
                            tools:ignore="VectorDrawableCompat" />

                        <TextView
                            android:onClick="scan"
                            android:id="@+id/tv_pay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btn_pay"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/small_padding"
                            android:text="@string/payment"
                            android:textAppearance="@style/AvenirLight"
                            android:textAllCaps="true"
                            android:textColor="@color/colorSecondary" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/scan"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <ImageButton
                            android:id="@+id/btn_scan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@null"
                            app:srcCompat="@drawable/ic_camera_alt"
                            tools:ignore="VectorDrawableCompat" />

                        <TextView
                            android:id="@+id/tv_scan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btn_scan"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/small_padding"
                            android:text="scan"
                            android:textAppearance="@style/AvenirLight"
                            android:textAllCaps="true"
                            android:textColor="@color/colorSecondary" />

                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
